# trader

./: .gitignore  Dockerfile  docker-compose.yml  main.py  ntfy.trazory.ai.nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
nginx/: vnc.trazar.ai.nginx.conf
src/: config.py  ibkr_api.py  llm.py  main.py  market_hours.py  news.py  notifier.py  sec.py  signals.py
