[project]
name = "ibkr"
version = "0.1.0"
description = "CAR short squeeze monitor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ib-insync>=0.9.86",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "xmltodict>=0.13.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.0",
    "ruff>=0.4.0",
]